--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="cont_hello_status_update_fragment">Hello Status Update Fragment</string>
     <string name="cont_hello_status_list_fragment">Hello Status fragment</string>
     <string name="cont_hello_chats_fragment">Hello Chats fragment</string>
+    <string name="logout">Logout</string>
+    <string name="profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--    end region-->
 
 </resources>
